@@ -48,6 +48,7 @@
       --add-opens com.azure.storage.blob/com.azure.storage.blob.implementation.util=ALL-UNNAMED
       --add-opens com.azure.storage.blob/com.azure.storage.blob.specialized=ALL-UNNAMED
       --add-opens com.azure.storage.blob/com.azure.storage.blob.changefeed=ALL-UNNAMED
+      --add-opens com.azure.storage.blob/com.azure.storage.blob.implementation.models=ALL-UNNAMED
       --add-reads com.azure.core=ALL-UNNAMED
       --add-reads com.azure.core.test=ALL-UNNAMED
       --add-reads com.azure.core.amqp=ALL-UNNAMED
@@ -136,7 +137,7 @@
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
-      <version>3.4.23</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
+      <version>3.4.25</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
